Bug 110657 - Rendering failure using wine-nine with the Touhou 17 demo
Summary: Rendering failure using wine-nine with the Touhou 17 demo
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/Iris (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-09 22:55 UTC by Link Mauve
Modified: 2019-08-08 05:52 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Briefly correct texture being rendered (316.26 KB, image/png)
2019-05-09 22:55 UTC, Link Mauve
Details

Description Link Mauve 2019-05-09 22:55:19 UTC
Created attachment 144212 [details]
Briefly correct texture being rendered

When running the Touhou 17 demo in wine-nine with iris, no screen gets rendered correctly, I only managed to see one correct texture while everything else looks like a misplaced gradient (see the attached screenshot). In-game it doesn’t look any better.

This is on ArchLinux, running Linux 5.0.12, Mesa 1f1007a4edcefa1c291c1b4e13d6cec35a59ca6f, wine 4.7, wine-nine 0.4, on an i5-8250U (UHD 620, gen9.5).
Comment 1 Link Mauve 2019-05-10 10:07:15 UTC
This also applies to Touhou 10 to 16 which are probably easier to find for the time being, especially the demos.

Here is one such demo: http://mirror.studio-ramble.com/upload/535/200806/th11tr002a_setup.exe (linked from http://www16.big.or.jp/~zun/html/th11dl.html)

You may have to generate a ja_JP.UTF-8 locale and to set it as your LANG before running this game, otherwise it crashes.
Comment 2 Danylo 2019-05-16 12:54:00 UTC
Thanks for reporting. I also could reproduce it with similar setup. However I wasn't able to identify the issue from a quick research.
Comment 3 Danylo 2019-07-25 11:05:09 UTC
The issue was with iris not handling windows space coordinates for vertex shader.

I've sent a merge request: https://gitlab.freedesktop.org/mesa/mesa/merge_requests/1451

The game works without visible issues with the patch.
Comment 4 Kenneth Graunke 2019-08-08 05:52:49 UTC
Thanks Danylo!  Fixed by:

commit b4c54894bba085966c52cb515bd72927e4ec4939
Author: Danylo Piliaiev <danylo.piliaiev@globallogic.com>
Date:   Thu Jul 25 13:09:08 2019 +0300

    iris: Handle vertex shader with window space position
    
    Iris advertises support for PIPE_CAP_TGSI_VS_WINDOW_SPACE_POSITION
    so let's actually implement it.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=110657
    
    Signed-off-by: Danylo Piliaiev <danylo.piliaiev@globallogic.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.